Fixes for mobile push

--- a/PortfolioIndex.html
+++ b/PortfolioIndex.html
@@ -31,11 +31,10 @@
 
     <div class="sideHeading">
 
-      <div class="SEGD" style="color: dodgerblue; font-family: Merriweather, consolas;">Portfolio</div>
+      <div class="Portfolio_Page_Heading">Portfolio</div>
 
     </div>
       
-
 
       <div class="site-wrap">
         <div class="aboutme" style="padding: 20px;">University Projects</div>
@@ -95,7 +94,7 @@
               <div class="flip-box-back center-box-text">
                 <a id="TopDisplayName" href="MoleManiaIndex.html">Mole Mania</a>
                 <p style="margin: 5%;">A simple mole game, about wacking some moles. Nothing suspitious here.</p>
-                <div id="BottomDisplayTitle">Genreal Programmer and VFX / Sound Programmer</div>
+                <div id="BottomDisplayTitle">Programmer</div>
               </div>
       
             </div>
