Minor Gramer Fixes

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <div id = "divToShow" class = "reveal introtext-container">
       <div class="aboutme" style="text-align: center;">About Me</div>
       <div class="AboutMeTextCenter">
-        <p>Salutations! I'm <b><u>Noah Trillizio</u></b>, a game programmer and designer from Buffalo, New York, and I've loved <b><u>video games</u></b> for as long as I 
+        <p>Salutations! I'm <b><u>Noah Trillizio</u></b>, a game programmer and designer from Buffalo, New York. I've loved <b><u>video games</u></b> for as long as I 
           can remember and have always wanted to be able to give back to the medium that raised me. I've been making games since I was 9 where I would make up 
-          card and board games for my Boy Scouts troop, before eventually learning to code in high school. Since then have graduated cum laude from Bradley University 
+          card and board games for my Boy Scout troop, before eventually learning to code in high school. Since then have graduated cum laude from Bradley University 
           with a <b><u>Bachelor's in Computer Science</u></b> with a concentration in Game Technology and a <b><u>Minor in Game Design</u></b>.
         </p>
         <p>Here you can see some of the projects I've had the opportunity of contributing to. I have a strong perseverance for learning 
