Mobile Video Test

--- a/DoomMatesIndex.html
+++ b/DoomMatesIndex.html
@@ -63,7 +63,7 @@
         given they have a script and all other assets.
       </div>
 
-      <video width="640" height="410" muted autoplay loop>
+      <video width="640" height="410" playinline muted autoplay loop>
         <source src="videos/VN_Tool.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
@@ -85,7 +85,7 @@
         game. Also, with a little more time put into it I belive it can come out loooking like something truly special.
       </div>
 
-      <video width="640" height="410" muted autoplay loop>
+      <video width="640" height="410" playinline muted autoplay loop>
         <source src="videos/VN_GamePlay.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
