Mobile Compatibility Push

--- a/AnxietyIndex.html
+++ b/AnxietyIndex.html
@@ -30,17 +30,18 @@
     </aside>
   </div>
     
-    <img width="790px" class="GameImageCenter" src="images/Anxiety_Icon.png">
+    <img class="GameImageCenter" src="images/Anxiety_Icon.png">
 
     <div class="GameScreenTitle">Anxiety: The Game</div>
 
-    <div class="GameInfoBlock">
+    <div class="CenterGameInfo">
       <div class="GameInfoRow"><b>Project Status</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Finished</div>
-      <div class="GameInfoRow"><b>Project Type</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University / Group Project</div>
+      <div class="GameInfoRow"><b>Project Type</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University Project</div>
       <div class="GameInfoRow"><b>Project Duration</b>&nbsp;&nbsp;&nbsp;1.5 months</div>
       <div class="GameInfoRow"><b>Software Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Unity</div>
       <div class="GameInfoRow"><b>Languages Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C#</div>
-      <div class="GameInfoRow"><b>Primary Role</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Combat Programmer</div>
+      <div class="GameInfoRow"><b>Primary Role</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Programmer</div>
+      <br>
       <br>
       <a href="https://simmer.io/@EmptyWisp/anxiety" class="SeeEverythingButton">Play Game Here</a>
     </div>
@@ -55,7 +56,7 @@
     </div>
 
     <div class="GameAboutBlock">
-        <video width="640" height="410" muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
             <source src="videos/AnxietyGamplay.mp4" type="video/mp4">
             Your browser does not support mp4
         </video>
@@ -76,7 +77,7 @@
     <br>
     <footer id="footerF1">
         <p class="aboutme">Contact Me:</p>
-        <p style="max-width: 700px; margin: auto;">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
+        <p class="footerText">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
           as quick as I can! I'm also on social media, if you'd like to contact me there:
         </p>
     
