--- a/BrainGame.html
+++ b/BrainGame.html
@@ -34,13 +34,14 @@
 
     <div class="GameScreenTitle">Sliding Brain Game</div>
 
-    <div class="GameInfoBlock">
+    <div class="CenterGameInfo">
       <div class="GameInfoRow"><b>Project Status</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Finished</div>
       <div class="GameInfoRow"><b>Project Type</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Solo Project</div>
       <div class="GameInfoRow"><b>Project Duration</b>&nbsp;&nbsp;&nbsp;6 months</div>
       <div class="GameInfoRow"><b>Software Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Unity</div>
       <div class="GameInfoRow"><b>Languages Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C#</div>
       <div class="GameInfoRow"><b>Primary Role</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Everything (Except Art)</div>
+      <br>
       <br>
       <a href="https://ntrillizio.itch.io/sliding-brain-game" class="SeeEverythingButton">Play Game Here</a>
     </div>
@@ -65,7 +66,7 @@
           one end of a maze to another.
         </div>
   
-        <video width="640" height="410" muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
           <source src="videos/BrainGamePuzzle.mp4" type="video/mp4">
           Your browser does not support mp4
         </video>
@@ -82,12 +83,12 @@
             suited to your skill level. Your skills being determined by how quickly you complete each previous puzzle.
         </div>
 
-        <video width="640" height="410" muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
             <source src="videos/BrainGameTutorial.mp4" type="video/mp4">
             Your browser does not support mp4
         </video>
 
-        <video width="640" height="410" muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
             <source src="videos/BrainGameTutorial2.mp4" type="video/mp4">
             Your browser does not support mp4
         </video>
@@ -109,7 +110,7 @@
         people found different stories.
       </div>
   
-      <video width="640" height="410" muted autoplay loop>
+      <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
         <source src="videos/BrainGameOP2.mp4" type="video/mp4">
           Your browser does not support mp4
       </video>
@@ -126,7 +127,7 @@
             feel and sound. Doing several takes of some lines till I got all the lines to sound as natural as I could.
         </div>
 
-      <img style="width: 100%; height: 410px;" class="GameImageCenter" src="images/AudioScreen.png">
+      <img class="GamePlayImageCenter" width="640" height="410" src="images/AudioScreen.png">
 
       <div class="GameAboutText">
           Since there was a lot of audio involved in this project I was asked to have this screen appear between each puzzle
@@ -138,7 +139,7 @@
     <br>
     <footer id="footerF1">
         <p class="aboutme">Contact Me:</p>
-        <p style="max-width: 700px; margin: auto;">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
+        <p class="footerText">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
           as quick as I can! I'm also on social media, if you'd like to contact me there:
         </p>
     
