--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="flip-box-back center-box-text">
               <a id="TopDisplayName" href="MummyMansionIndex.html">Mummy Mansion</a>
               <p style="margin: 5%;">Take back what is rightfully yours from a rich corrupt art collector.</p>
-              <div id="BottomDisplayTitle">Programmer</div>
+              <div id="BottomDisplayTitle">Programmer & Designer</div>
             </div>
   
         </div>
@@ -174,7 +174,7 @@
 
   <footer id="footerF1">
     <p class="aboutme">Contact Me:</p>
-    <p style="max-width: 700px; margin: auto;">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
+    <p class="footerText">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
       as quick as I can! I'm also on social media, if you'd like to contact me there:
     </p>
 
