--- a/DoomMatesIndex.html
+++ b/DoomMatesIndex.html
@@ -34,15 +34,18 @@
 
     <div class="GameScreenTitle">Doom Mates</div>
 
-    <div class="GameInfoBlock">
-      <div class="GameInfoRow"><b>Project Status</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ongoing</div>
-      <div class="GameInfoRow"><b>Project Type</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GameJam</div>
-      <div class="GameInfoRow"><b>Project Duration</b>&nbsp;&nbsp;&nbsp;1 Month (but continuing)</div>
-      <div class="GameInfoRow"><b>Software Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Unity</div>
-      <div class="GameInfoRow"><b>Languages Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C#</div>
-      <div class="GameInfoRow"><b>Primary Role</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VN Programmer</div>
-      <br>
-      <a href="https://adams-wod.itch.io/doommates" class="SeeEverythingButton">Play Game Here</a>
+    <div>
+      <div class="CenterGameInfo">
+        <div class="GameInfoRow"><b>Project Status</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ongoing</div>
+        <div class="GameInfoRow"><b>Project Type</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GameJam</div>
+        <div class="GameInfoRow"><b>Project Duration</b>&nbsp;&nbsp;&nbsp;1 Month</div>
+        <div class="GameInfoRow"><b>Software Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Unity</div>
+        <div class="GameInfoRow"><b>Languages Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C#</div>
+        <div class="GameInfoRow"><b>Primary Role</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Programmer</div>
+        <br>
+        <br>
+        <a href="https://adams-wod.itch.io/doommates" class="SeeEverythingButton">Play Game Here</a>
+      </div>
     </div>
     <br>
     <div class="GameAboutBlock">
@@ -63,7 +66,7 @@
         given they have a script and all other assets.
       </div>
 
-      <video width="640" height="410" playinline muted autoplay loop>
+      <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
         <source src="videos/VN_Tool.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
@@ -85,7 +88,7 @@
         game. Also, with a little more time put into it I belive it can come out loooking like something truly special.
       </div>
 
-      <video width="640" height="410" playinline muted autoplay loop>
+      <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
         <source src="videos/VN_GamePlay.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
@@ -93,7 +96,7 @@
 
     <footer id="footerF1">
         <p class="aboutme">Contact Me:</p>
-        <p style="max-width: 700px; margin: auto;">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
+        <p class="footerText">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
           as quick as I can! I'm also on social media, if you'd like to contact me there:
         </p>
     
