--- a/Fantasia'sFrigateIndex.html
+++ b/Fantasia'sFrigateIndex.html
@@ -34,13 +34,14 @@
 
     <div class="GameScreenTitle">Fantasias Frigates</div>
 
-    <div class="GameInfoBlock">
+    <div class="CenterGameInfo">
       <div class="GameInfoRow"><b>Project Status</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Finished</div>
-      <div class="GameInfoRow"><b>Project Type</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University / Group Project</div>
+      <div class="GameInfoRow"><b>Project Type</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University Project</div>
       <div class="GameInfoRow"><b>Project Duration</b>&nbsp;&nbsp;&nbsp;4 months</div>
       <div class="GameInfoRow"><b>Software Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Unity</div>
       <div class="GameInfoRow"><b>Languages Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C#</div>
       <div class="GameInfoRow"><b>Primary Role</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Programmer</div>
+      <br>
       <br>
       <a href="https://adams-wod.itch.io/fantasias-frigate" class="SeeEverythingButton">Play Game Here</a>
     </div>
@@ -62,7 +63,7 @@
         notes you have acquired throughout the game.
       </div>
 
-      <video width="640" height="410" muted autoplay loop>
+      <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
         <source src="videos/Fantasia's Frigate Inventory.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
@@ -87,7 +88,7 @@
           get punished too heavily for screwing up.
         </div>
   
-        <video width="640" height="410" muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
           <source src="videos/Fantasia's Frigate Respawn.mp4" type="video/mp4">
           Your browser does not support mp4
         </video>
@@ -95,7 +96,7 @@
 
     <footer id="footerF1">
         <p class="aboutme">Contact Me:</p>
-        <p style="max-width: 700px; margin: auto;">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
+        <p class="footerText">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
           as quick as I can! I'm also on social media, if you'd like to contact me there:
         </p>
     
