--- a/WickedWizardsIndex.html
+++ b/WickedWizardsIndex.html
@@ -34,13 +34,14 @@
 
     <div class="GameScreenTitle">Wicked Wizards</div>
 
-    <div class="GameInfoBlock">
+    <div class="CenterGameInfo">
       <div class="GameInfoRow"><b>Project Status</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;On Hold</div>
-      <div class="GameInfoRow"><b>Project Type</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Senior Capstone Project</div>
+      <div class="GameInfoRow"><b>Project Type</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Senior Project</div>
       <div class="GameInfoRow"><b>Project Duration</b>&nbsp;&nbsp;&nbsp;1 Year</div>
       <div class="GameInfoRow"><b>Software Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Unity</div>
       <div class="GameInfoRow"><b>Languages Used</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C#, PHP, SQL</div>
-      <div class="GameInfoRow"><b>Primary Role</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Networking/Database Programmer</div>
+      <div class="GameInfoRow"><b>Primary Role</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Programmer</div>
+      <br>
       <br>
       <a href="https://wizards2223.itch.io/wicked-wizards" class="SeeEverythingButton">Play Game Here</a>
     </div>
@@ -62,7 +63,7 @@
         I created and implemented all the networking that occurs outside of the game itself.
       </div>
 
-      <video width="640" height="410" muted autoplay loop>
+      <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
         <source src="videos/WickedWizardsLogin.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
@@ -87,7 +88,7 @@
           This includes the multiplayer relay network that allows for others to play at the same time.
         </div>
   
-        <video width="640" height="410" muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
           <source src="videos/WickedWizardsLobby.mp4" type="video/mp4">
           Your browser does not support mp4
         </video>
@@ -111,7 +112,7 @@
           I worked very closely with the VFX artist to implement all of the player-related VFX in a satisfying way.
         </div>
   
-        <video width="640" height="410" muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
           <source src="videos/WickedWizardsGameplay.mp4" type="video/mp4">
           Your browser does not support mp4
         </video>
@@ -119,7 +120,7 @@
 
     <footer id="footerF1">
         <p class="aboutme">Contact Me:</p>
-        <p style="max-width: 700px; margin: auto;">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
+        <p class="footerText">Feel free to send me a message here: trillizio3@hotmail.com, I'll try to respond 
           as quick as I can! I'm also on social media, if you'd like to contact me there:
         </p>
     
