--- a/BrainGame.html
+++ b/BrainGame.html
@@ -66,7 +66,7 @@
           one end of a maze to another.
         </div>
   
-        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playsinline autoplay loop muted>
           <source src="videos/BrainGamePuzzle.mp4" type="video/mp4">
           Your browser does not support mp4
         </video>
