--- a/DoomMatesIndex.html
+++ b/DoomMatesIndex.html
@@ -66,7 +66,7 @@
         given they have a script and all other assets.
       </div>
 
-      <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
+      <video class="Gameplay_Video" width="640" height="410" playsinline autoplay loop muted>
         <source src="videos/VN_Tool.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
@@ -88,7 +88,7 @@
         game. Also, with a little more time put into it I belive it can come out loooking like something truly special.
       </div>
 
-      <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
+      <video class="Gameplay_Video" width="640" height="410" playsinline autoplay loop muted>
         <source src="videos/VN_GamePlay.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
