--- a/Fantasia'sFrigateIndex.html
+++ b/Fantasia'sFrigateIndex.html
@@ -63,7 +63,7 @@
         notes you have acquired throughout the game.
       </div>
 
-      <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
+      <video class="Gameplay_Video" width="640" height="410" playsinline autoplay loop muted>
         <source src="videos/Fantasia's Frigate Inventory.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
@@ -88,7 +88,7 @@
           get punished too heavily for screwing up.
         </div>
   
-        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playsinline autoplay loop muted>
           <source src="videos/Fantasia's Frigate Respawn.mp4" type="video/mp4">
           Your browser does not support mp4
         </video>
