--- a/MummyMansionIndex.html
+++ b/MummyMansionIndex.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="GameAboutBlock">
-        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playsinline autoplay loop muted>
             <source src="videos/MummyMansion.mp4" type="video/mp4">
             Your browser does not support mp4
         </video>
