--- a/WickedWizardsIndex.html
+++ b/WickedWizardsIndex.html
@@ -63,7 +63,7 @@
         I created and implemented all the networking that occurs outside of the game itself.
       </div>
 
-      <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
+      <video class="Gameplay_Video" width="640" height="410" playsinline autoplay loop muted>
         <source src="videos/WickedWizardsLogin.mp4" type="video/mp4">
         Your browser does not support mp4
       </video>
@@ -88,7 +88,7 @@
           This includes the multiplayer relay network that allows for others to play at the same time.
         </div>
   
-        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playsinline autoplay loop muted>
           <source src="videos/WickedWizardsLobby.mp4" type="video/mp4">
           Your browser does not support mp4
         </video>
@@ -112,7 +112,7 @@
           I worked very closely with the VFX artist to implement all of the player-related VFX in a satisfying way.
         </div>
   
-        <video class="Gameplay_Video" width="640" height="410" playinline muted autoplay loop>
+        <video class="Gameplay_Video" width="640" height="410" playsinline autoplay loop muted>
           <source src="videos/WickedWizardsGameplay.mp4" type="video/mp4">
           Your browser does not support mp4
         </video>
